--- a/baseline.yaml
+++ b/baseline.yaml
@@ -1,24 +1,27 @@
 admin:
-  access_log_path: /dev/null
+  access_log_path: /tmp/access.log
   address:
     socket_address:
-      address: 127.0.0.1
+      address: 0.0.0.0 
       port_value: 9000
 dynamic_resources:
-  ads_config:
-    api_type: GRPC
-    cluster_names:
-    - xds_cluster
   cds_config:
     api_config_source:
       api_type: GRPC
-      cluster_names:
-      - xds_cluster
+      grpc_services:
+        envoy_grpc:
+          cluster_name: xds_cluster
   lds_config:
     api_config_source:
       api_type: GRPC
-      cluster_names:
-      - xds_cluster
+      grpc_services:
+        envoy_grpc:
+          cluster_name: xds_cluster
+#  ads_config:
+    #api_config_source:
+      #api_type: GRPC
+      #cluster_names:
+      #- xds_cluster
 node:
   cluster: service_greeter
   id: test-id
@@ -29,6 +32,6 @@ static_resources:
     connect_timeout: 1s
     hosts:
     - socket_address:
-        address: 127.0.0.1
+        address: 192.168.65.2 
         port_value: 18000
     http2_protocol_options: {}    
